[SVG] fix resize issues on firefox and opera

--- a/assets/css/front/responsive/960.styl
+++ b/assets/css/front/responsive/960.styl
@@ -74,8 +74,8 @@
     .hw-hire
       float none
       display block
-      margin 0 auto
-      width 65%
+      margin 0 1em
+      width auto
 
       &:before,
       &:after
@@ -92,6 +92,8 @@
     border 0
 
     object
+      // Height is for Firefox/Opera good SVG scaling
+      height 28em
       iso-reset()
 
   .hw-services h6
